--- a/Read/ReadAndroid/05.智能硬件/07.设备串口通信实践.md
+++ b/Read/ReadAndroid/05.智能硬件/07.设备串口通信实践.md
@@ -1,4 +1,111 @@
 #### 目录介绍
+- 01.串口通信的方案
+- 02.方案的对比分析
+- 03.串口通信的方案
+- 04.USB通信的方案
+
+
+
+
+### 01.串口通信的方案
+- 通信方案
+  - USB Socket通信和串口通信。每一种方式都有自己的设备限制和场景限制。
+
+
+### 02.方案的对比分析
+- 串口通信：
+    - 优点：1、不管是PC还是Android设备，串口都是默认支持的通用口，通用性强。2、无需高危权限，默认就能双向通信，更加安全。3、两根线就能完成通信，成本低廉。
+    - 缺点：1、传输数据限制：数据帧的大小限制为最多 9 位，常用与ASCII编码，最多可以给256个字符(包括字母、数字、标点符号、控制字符及其他符号)分配(或指定)数值。
+    - 2、不支持2字节编码(中文编码等)：比如GB2312、GBK、Unicode、UTF-8等。
+    - 3、不支持一对多：串口通信只支持一个主系统和一个从系统之间的通信。
+    - 4、通信效率低：通信速率由波特率决定，速度效率是比较低的。
+- USB通信：
+    - 优点：1、高速传输，速度快。2、传输数据为字节级，可灵活转换适配各种编码方式。
+    - 缺点：1、走USB Socket通信，需要开启USB调试，设备安全性大大降低。
+- 方案选择
+    - 从安全的角度考虑，更偏向于串口通信，虽然串口通信不是高速传输，但是对于我们的业务场景，100ms内能完成数据交互，用户体验几乎可以忽略不计，这个串口通信就能做到。
+
+
+
+
+### 03.串口通信的方案
+#### 3.1 理解串口协议
+- 什么是串口协议？
+    - 串口通信的概念非常简单，串口按位（bit）发送和接收字节。可能还是比较抽象，我们以上图为例通俗一点介绍。
+    - 比如字符串‘L’，对应的二进制是01001100，串口通信就是通过串口线，将字符串‘L’以二进制的方式按位串行传输，传输速率就是双方规定的波特率。
+    - 在我们的串口线里面有一个芯片，里面包含着一个硬件数据接收缓冲区，用来缓存发送端发来的数据。就好比一个水池，用来聚集上流的水源，下流的人按照一定的频率定时来取水。
+- 假设我们的需求是：每次来都取走全部的数据。
+    - 一个完整的包是‘LOL’，理想的情况下我们最想每次来都能拿到完整的数据。
+    - 但是如上图所以，我们来取数据的时候存在各种情况，如‘OL’，‘LOL’，‘OLLOL’，‘LOLLOL’，就是所谓的数据‘分包’和‘粘包’。
+    - 针对这两种场景，我们如何正确的从里面拆分以及整合出正确的包数据呢？
+
+
+#### 3.2 建立应用缓冲区
+- 分包和粘包终极解决方案就是建立应用缓冲区，将串口硬件缓冲区的数据按照顺序存进应用缓冲区，然后再按照一定的规则，将这一串数据，按照一个一个包切出来。
+- 那么问题来了，如何定义这个包数据规则以及如何高效绝对可用的将数据切出来呢？
+
+
+
+#### 3.3 通信包结构
+- 完整的包结构包含：包头、包ID、包类型、目标数据长度、目标数据以及包尾校验位。
+    - 包头：固定的16进制0x5A。
+    - 包ID：每个数据包唯一的ID。
+    - 包类型：规定数据包具体是做什么的。
+    - 目标数据长度：目标数据的真实长度。
+    - 目标数据：最终需要携带的数据。
+    - 包完整校验：验证前面的数据是否是完整的。
+- 以电子工卡支付一张夜宵劵为例子，我们的目标数据是：030000000200000000010000000201，代表的是晚餐消费，支付一张夜宵劵，夜宵劵抵扣金额是2分，扣取的现金是0元。具体的包结构如下：
+    - 5A 625B 01A2 000F 03 00000002 00000000 01 00000002 01 96
+    - 5A是包头；625B是包ID；01A2是扣费命令；000F是包长度；03是晚餐；00000002是总金额2分；00000000扣现金0元；01是一张券；00000002是券抵扣2分；01是模式1；96是校验
+- 如何处理包的正常读取
+    - 如果接收到的数据包不够，那么先不处理，等到数据包足够，再以5A为起始位，按照包长度截取指定长度的数据包，再通过包尾校验位计算数据是否完整。
+    - 如果数据包完整的话那么这个包取出来，开始取下个包。如果数据包不完整，则寻找下一个5A，前面不完整的数据直接抛弃。
+    - 这样就能保证每次都能取到正确的数据包，异常数据包丢弃，不会影响到下个数据包的正常读取。
+
+
+
+
+### 04.USB通信的方案
+#### 4.1 基于Socket通信
+- Socket通信的优点
+    - 1、传输数据支持多种编码：传输数据为字节级，可灵活转换适配各种编码方式。
+    - 2、支持一对多：基于Socket通信，支持一对多，后期扩展性强。
+    - 3、速度快：传输时间短，速度快，性能高。
+- Socket是对TCP/IP协议的封装，Socket本身并不是协议，而是一个调用接口（API）
+    - 通过Socket，我们才能使用TCP/IP协议来发送数据和接收数据。
+    - 如果是在一台电脑上运行两个程序，只要写死IP为127.0.0.1，端口选择一个合适的就可以进行通信。
+- 但是实际场景有点不一样
+    - 因为一台是PC，另外一台是Android机具，在断网的情况下怎么通过一根USB线介质，实现Socket双向通信？adb forward tcp:1111 tcp:2222
+    - 顾名思义，adb forward的功能是建立一个转发，adb forward tcp:11111 tcp:22222的意思是，将PC端的11111端口收到的数据，转发给到手机中22222端口。
+    - 但是光执行这个命令还不能转发数据，还需要完成两个步骤才能传数据。这两个步骤是：
+        - 1、在手机端，建立一个端口为22222的server，并打开server到监听状态。
+        - 2、在PC端，建立一个socket client端，连接到端口为11111的server上。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
