--- a/Read/ReadBlogWiki/02.计划管理/02.计划的落地策略.md
+++ b/Read/ReadBlogWiki/02.计划管理/02.计划的落地策略.md
@@ -5,9 +5,7 @@
 - 04.计划的不同阶段
 - 05.从时间纬度落地
 - 06.计划落地层层进
-- 09.坚持15分钟法则
-- 10.如何处理碎片化
-
+- 07.强调计划重要性
 
 
 
@@ -75,20 +73,7 @@
 - 时间周期为1-2周，既不会过于频繁，也能及时收效；稍微高于自己的能力，可以有效激发自己付出更多努力；小目标之间相互关联、依次递进。
 
 
-
-### 09.坚持15分钟法则
-- **15分钟法则**。可能有些人，回到家中已经满身疲惫，什么事都不想干。最多就刷刷短视频消遣，哪还有心思，去做学习、锻炼、赚钱这种烧脑费力的事情。
-- 以前在书上看到的，跟大家分享一个秘诀，简单好用，就是「15分钟法则」。这期间，不要碰手机，提前把信息处理好。
-- 马上坐到书桌前，告诉自己，做一件有意义的事（提前做好计划）：回顾笔记、看经典书也好、罗列todo，按照自己的志趣，安排你业余时间的1个15分钟。
-- **记住，这期间，不要碰手机**。你会发现一个神奇的现象：一旦你的身体启动学习机制，你会发现坚持下去，并没有那么难。
-- 开启节奏然后坚持，习惯了这种节奏以后，慢慢地你会爱上这种疲惫又充实的感觉。这种久违的撕裂成长感，会比沉迷于浅层的消遣，要爽太多了。
-
-
-
-### 10.如何处理碎片化
-- 平时的时候，会在各种渠道接收一些碎片文章，各种群、朋友圈、朋友的推荐等等，这些碎片文章大部分是一些比较片面的，线性的文章，我一般都是先粗看一遍，如果发现有什么亮点，就会收藏起来，否则支持pass。
-- 然后，再我的某个碎片时间，把这些平时粗筛的文章拿出来看，这次再看有哪些可以被我吸收的知识，然后给它打上tag，最后在遇到一些问题的时候，就可以从这些tag中，寻找答案。
-- 所以，一般一篇好的文章，我会读三遍以上，而获得这些碎片文章，则是我碎片时间的主要目的。
-- 碎片文章其实是有很大隐患的，因为长期只从片面的角度看这些文章的东西，会让你的思维变得混乱、焦虑，所以你需要一段时间就进行一次磁盘碎片整理，将这些碎片文章，添加到你自己的知识体系树上。
-- 只有让这些碎片成为你的知识体系的一个根节点，这些碎片文章才是有意义的，否则，这些碎片时间就完全被浪费掉了。这就是为什么，看了各个大佬的干货，却依然成不了大佬？
-
+### 07.强调计划重要性
+- 分析一下计划为什么没完成。我觉得大多数之所以没有完成，是因为完不成也没什么，没有任何影响。假如没有完成，你一百万没有了，你会完成吗？肯定会！这就是根源。
+- 要记住，你制定的计划一定要对你来说很重要，如果没有完成可能会对你造成很严重的后果，那么多半就能完成。
+- 除非这个计划对你来说不重要！你可能反驳我，觉得我说错了，但是你知道我说对了。你嘴上觉得重要，行动出卖了你，如果真的超级重要，就一定会完成。
