--- a/Read/ReadBlogWiki/02.计划管理/04.计划可行和调整.md
+++ b/Read/ReadBlogWiki/02.计划管理/04.计划可行和调整.md
@@ -5,7 +5,8 @@
 - 04.有兴趣执行下去
 - 05.关键节点要评估
 - 06.计划逐步增难度
-
+- 07.掌控心态很重要
+- 08.难以坚持怎么办
 
 
 
@@ -46,13 +47,38 @@
 - 建议每周日晚上对上周所做的事情进行回顾，并盘点下周要做的事情，同时看看现在所做的事情和年度计划是否保持一致，确保没有偏离方向。
 
 
-
 ### 06.计划逐步增难度
 - 设置比你当前水平高一点点的目标是更为合适的，这样既有挑战的动力，又不会因为太难而畏惧不前。
 - 这里的 ”高一点点“ 要注意，应该理解为比 ”跳一跳才能够得着“ 难度更低。
 
 
+### 07.掌控心态很重要
+- 实现预期目标，达到最优结果，是每个人心中梦寐以求的终点。但是在完成的过程中，一定会出现这样或是那样的问题，不断的重复、再重复，坚持、再坚持的迭代过程，最考验一个人的，就是心态。
+- 要正确的看待出现的各种问题，有耐心、有韧性，注意心态把控，特别是在出现较大问题时，懂得及时调整心态，始终保持乐观、积极的心态做事、想事，才能实现目标。
 
+
+### 08.难以坚持怎么办
+#### 8.1 分析定位是否准
+- 制定的全年工作目标，通常来说是同上级领导共同确认出来的。确认过程中，一定要注意结合自身实际情况，与领导多沟通交流，将实际工作情况和想法，完全反馈给上级领导，这样才能保证领导下达的任务目标，更切合真实情况。
+- 如果发现领导下达的目标与自身实际情况不符，更需要与领导多交流，务必找到出现偏差的具体原因，从而找到自身不足之处，在后续工作中进行重点补足。在定位不准又原因不明的情况下，是无法完成工作目标的。
+
+
+#### 8.2 分析执行的偏差
+- 在完成工作计划的过程中，一定要注意采取的方法，要与实际得到的结果相互验证。切忌不要想当然来做事情，反馈回来的结果不在预期范围内，依然固执己见，不愿做出调整。
+- 方法一旦错误，一味的坚持，只会使错误被越来越大，以至于产生不可预期的后果。实现计划的方式方法是多种多样的，一定要懂得变通，反复试验，以得出最优方案。
+
+
+#### 8.3 分析资源足不足
+- 计划再好，方案再佳，也要有合适的人才能实现。完成计划过程中，所采取的方式方法，一定要结合自身能力以及资源，不能完全靠想像而来。
+- 最贴合自身的实现方法，就是最优的实现方法，把握自己的长处与资源，无限发挥出来，才是赢得胜利的关键。
+
+
+#### 8.4 需要延迟满足感
+- 上世纪 60 年代，美国有个著名的「斯坦福棉花糖实验」，实验中，小孩子可以马上获得一样奖励，比如 1 个棉花糖，或者等待一段时间，得到 2 个棉花糖。
+- 实验发现，能为偏爱的奖励坚持忍耐更长时间的孩子，通常具有更好的人生表现，如更好的 SAT 成绩、教育成就、身体质量指数等。
+- **延迟满足，就是指为了更有价值的长远结果，而放弃即时满足，以及在等待中展示的自我控制能力**。
+- 延迟满足感，决定了你做判断时，是基于长期还是短期。工作不分你我，做事不分边界，延迟满足感，会让你愿意主动做更多，得到更多的锻炼，而不是去斤斤计较这是不是我该做的事情。
+- 延迟满足感，会让你有更高的目标，定更高的标准，也许你前两年变化得慢，但10年后再看，肯定会非常不一样。
 
 
 
