--- a/Read/ReadBlogWiki/02.计划管理/05.罗列计划的提升.md
+++ b/Read/ReadBlogWiki/02.计划管理/05.罗列计划的提升.md
@@ -7,6 +7,7 @@
 - 06.秩序感和灵活性
 - 07.最终达到的目标
 - 08.计划实现要自信
+- 09.想太多而做太少
 - 10.今天起改变三点
 
 
@@ -36,20 +37,22 @@
 #### 3.2 使用图示
 - 回顾“考虑未来”能力的定义，计划能力是为了完成某个计划或者目标，脑子里能自动形成一步一步的方式。很多人没有计划性，其实是不知道目标在哪儿，不知道怎么把要达成的目标一步一步地拆解。
 - 通过“使用图示”来提高计划能力。当我们希望一步一步达到目标时，不妨把日常生活中的点滴都当成培养计划能力的学习机会。比如，每天工作小计划按照优先级图示说明。
-- 在达成这个目标之前，我们需要做哪些事情？将要达成这个目标的过程一一拆解。建立流程：把流程落实到纸面，执行建立流程培养的是计划性，这些方法适用于生活的方方面面。开始执行时，制订的流程可能不适合，没关系。可以过一两周后重新调整，不断地优化流程。这个过程其实也是在锻炼计划性，为了达成这个目标，我们如何排序，从而令过程最优化。
+- 在达成这个目标之前，我们需要做哪些事情？将要达成这个目标的过程一一拆解。建立流程：把流程落实到纸面，执行建立流程培养的是计划性，这些方法适用于生活的方方面面。
+- 开始执行时，制订的流程可能不适合，没关系。可以过一两周后重新调整，不断地优化流程。这个过程其实也是在锻炼计划性，为了达成这个目标，我们如何排序，从而令过程最优化。
 
 
 
 #### 3.3 使用日历
 - 怎么能够意识到提前计划的好处？有些人会时间管理，也懂得怎么把目标过程拆解，但骨子里觉得没有必要计划。这时，可以用一些小技巧让自己认识到提前计划是有好处的，提前计划很重要。
-- 将重要日子记录在日历上。用日历帮助认识到计划的重要性。新年伊始或每个月初，用便笺纸把一些重要的日子记录在日历上，比如家人的生日，参加的活动，阶段性的学习目标……类似这样的日子。标记好重要的日子后，进行一些“前瞻性”的讨论。讨论的目的：让自己意识到提前计划的重要性，进行这些前瞻性的讨论以后，在这个过程中，思考怎么去做，也是一种计划。
+- 将重要日子记录在日历上。用日历帮助认识到计划的重要性。新年伊始或每个月初，用便笺纸把一些重要的日子记录在日历上，比如家人的生日，参加的活动，阶段性的学习目标……类似这样的日子。
+- 标记好重要的日子后，进行一些“前瞻性”的讨论。讨论的目的：让自己意识到提前计划的重要性，进行这些前瞻性的讨论以后，在这个过程中，思考怎么去做，也是一种计划。
 
 
 
 #### 3.4 启发式提问
 - 面对求助的时候，要多运用启发式提问，让自己来完成，从而培养计划性。举个例子，孩子说：“工作中遇到一个业务目标不知道怎么去实现。”很多时候，别人拿过来三下五除二就帮做完了，但自己就失去了“预见未来”的能力，没有真的去想过：“我怎么可以一步一步完成这个任务并达到目标。”所以，可以用“启发式提问4步法”来帮助自己。
-- 你想完成的任务目标样子是怎样的？想象未来的样子即帮助去思考目标是什么。
-- 要完成这个目标，我们需要做什么事？引导拆解行动。可以自问自答，把这个步骤一步一步地拆解：“第一步要做什么，第二步要做什么，第三步要做什么。”
+- 你想完成的任务目标样子是怎样的？想象未来的样子即帮助去思考目标是什么。要完成这个目标，我们需要做什么事？
+- 引导拆解行动。可以自问自答，把这个步骤一步一步地拆解：“第一步要做什么，第二步要做什么，第三步要做什么。”
 - 我们需要什么时候完成？引入时间概念。时间概念这一步是灵活的，因为有一些工作需要时间概念，有一些工作不需要。需要时间概念时，会问自己。有时候，就是这样的一个提问，能让自己停下来想一想，这个过程本身就是锻炼。
 - 为了达到目标，我们需要先做什么，后做什么？选择最优排序方式，比如，你可以跟自己说：“刚才我们列出来要做的事情，为了达到这个目标，我们要先做什么、后做什么？”
 - 你想一想脑中的这个框架：目标是什么？如何帮助拆解行动？怎样引入时间概念？如何帮助选择最优排序顺序？这其实是在一步一步建立计划能力。可能有些步骤你不会用，有些步骤会缩减，也有可能一开始是自问自答，当我们提出问题时，就已经在引发思考了。所以，启发式提问看似和计划能力毫不相关，却是培养计划能力很重要的一个途径。
@@ -107,6 +110,14 @@
 - 而写成功日记，就是一个很好的提高自尊水平的方法。要学会自我肯定。每天写5条你的个人成果，任何小事都行。积累自己做成功的事情，越写，就越自信。如何才能让你有更多的成功事件写呢？做擅长的事情。
 - 把精力集中在你知道的、能做的和拥有的东西上。很多时候，我们会花很多时间去想我们不知道、不能做或没有的东西上面。比如当看到别人做什么行业很赚钱，看到别人卖什么产品很赚钱，看到别人写文章，做短视频很赚钱。然后，想都不想，就去研究，去瞎做。根本没想过的是，别人在自己的行业已经积累了5年，背后有很多资源支撑。别人写文章赚钱，是因为很多都是编辑出身，写文章写了10年。
 - 不去思考背景，就把精力放进去，最后只是看着别人赚钱。然后，你又去找赚钱的项目。当把时间和精力聚焦到你知道的、能做的和拥有的东西上，这是你的优势。做自己有优势的，擅长的事情，成功的概率自然高。
+
+
+### 09.想太多而做太少
+- 绝大部分人，总是想的太多，做的太少。想尝试这个，也想干那个，但是思来想去，时间全都浪费了，但是啥都没开始干。
+- 当你想做一件事的时候，不要想的太多，先坚定的执行起来，先干起来再说，在干的过程中，你会不断发现各种问题，然后不断去调整改进，直到找到一条属于自己的方向。
+- 大多数人往往会低估事情完成的难度，高估自己的执行能力，制定与自身能力远不相符的目标。而，最终的结局，也就可想而知了。因此，最高效的成长反而是从认清自身的那一刻开始的。
+- 执行力真的很重要，而且个人认为，几乎是最重要的能力之一，很多时候做事情，可能不需要太多的套路与复杂的玩法，只需要坚定的执行就可以了。
+- 执行力一定是第一位的，没有执行力，所有多么成熟严谨的方法论都是白搭。承认吧，你不是能力不行，你也不是比别人差，很多时候，你就是执行力不行。坚持听起来是最简单的，但是往往也是最难的。
 
 
 
