--- a/Read/ReadBlogWiki/03.建立体系/01.信息过载怎么办.md
+++ b/Read/ReadBlogWiki/03.建立体系/01.信息过载怎么办.md
@@ -74,6 +74,13 @@
 - 我的答案是：让你的内心对取得的效果感受到满意的深度层次上。它的反面是：但凡心存疑虑，不是那么确定要全力投入的事情，干脆就不做了。
 
 
+#### 5.3 碎片化提取精华
+- 平时在各种渠道接收一些碎片文章或信息，这些碎片内容大部分是一些比较片面的，一般都是先粗看一遍，如果发现有什么亮点，就会收藏起来，否则支持pass。
+- 然后，某个碎片时间，把这些平时粗筛的文章拿出来看，这次再看有哪些可以被我吸收的知识，然后给它打上tag，最后在遇到一些问题的时候，就可以从这些tag中，寻找答案。
+- 所以，一般一篇好的文章，我会读三遍以上，而获得这些碎片文章，则是我碎片时间的主要目的。
+- 碎片文章其实是有很大隐患的，因为长期只从片面的角度看这些文章的东西，会让你的思维变得混乱、焦虑，所以你需要一段时间就进行一次磁盘碎片整理，将这些碎片文章，添加到你自己的知识体系树上。
+- 只有让这些碎片成为你的知识体系的一个根节点，这些碎片文章才是有意义的，否则，这些碎片时间就完全被浪费掉了。这就是为什么，看了各个大佬的干货，却依然成不了大佬？
+
 
 
 
