--- a/Read/ReadBlogWiki/04.执行策略/07.学习方法的体系.md
+++ b/Read/ReadBlogWiki/04.执行策略/07.学习方法的体系.md
@@ -6,6 +6,7 @@
 - 05.十步学习法介绍
 - 06.十步学习法步骤
 - 07.要有闭环的思维
+- 08.坚持15分钟法则
 
 
 
@@ -116,6 +117,12 @@
 
 
 
+### 08.坚持15分钟法则
+- **15分钟法则**。可能有些人，回到家中已经满身疲惫，什么事都不想干。最多就刷刷短视频消遣，哪还有心思，去做学习、锻炼、赚钱这种烧脑费力的事情。
+- 以前在书上看到的，跟大家分享一个秘诀，简单好用，就是「15分钟法则」。这期间，不要碰手机，提前把信息处理好。
+- 马上坐到书桌前，告诉自己，做一件有意义的事（提前做好计划）：回顾笔记、看经典书也好、罗列todo，按照自己的志趣，安排你业余时间的1个15分钟。
+- **记住，这期间，不要碰手机**。你会发现一个神奇的现象：一旦你的身体启动学习机制，你会发现坚持下去，并没有那么难。
+- 开启节奏然后坚持，习惯了这种节奏以后，慢慢地你会爱上这种疲惫又充实的感觉。这种久违的撕裂成长感，会比沉迷于浅层的消遣，要爽太多了。
 
 
 
