--- a/Read/ReadBlogWiki/02.计划管理/03.计划拆分为任务.md
+++ b/Read/ReadBlogWiki/02.计划管理/03.计划拆分为任务.md
@@ -8,11 +8,12 @@
 - 07.任务时间的特性
 - 08.分配和执行任务
 - 09.目标拆任务案例
+- 10.沉淀管理方法论
 
 
 
 ### 01.目标任务的背景
-#### 1.1 概述背景
+#### 1.1 概述背景说明
 - 要想实现目标尤其是在一段时间内需要同时实现多个目标，这并不是一件容易的事。
 - 必须要对目标的特性、任务的特性进行充分的分析才有可能保证多个目标同时实现，否则就很容易陷入顾此失彼甚至是一个目标也无法实现的局面。
 
@@ -187,4 +188,25 @@
 - 4）周计划和日计划在初期可以做合并；
 - 5）学会做每日手账是一件非常快乐事情；这个格式很重要。特别是看到自己的清单上被逐一完成的时候，瞬间你会感受时光的美好！
 
+
+### 10.沉淀管理方法论
+- 目标管理的理念是现代管理学之父彼得·德鲁克在其著作《管理的实践》中最先提出的。德鲁克认为，并不是有了工作才有目标，而是相反，是先有了目标才能确定每个人的工作。
+- 目标管理要解决的问题是目标和资源之间关系是否匹配的问题。两者的匹配关系是衡量计划管理好坏的标准：当所拥有的资源能够支撑目标的时候，计划管理得以实现；当资源无法支撑目标或者大过目标的时候，要么浪费资源，要么“做白日梦”。
+- 目标有两种，一种是经营性目标，是硬性的，比如财务上的销售额、利润、成本、质量等指标；另外一种是管理性目标，是软性的，比如效率、流程和服务。
+
+
+#### 10.1 目标管理法核心
+- 目标必须具体、明确、适当，且要事先制定。每个人的需要可以通过个人目标的实现得到满足。目标管理包括两个部分，目标设置与目标管理。
+
+
+#### 10.2 目标设置四原则
+- 在目标设置理论中，德鲁克强调“目标既要有一定的难度又要切实可行”，沿着这个原则，在设置目标的时候，可以遵守四个基本原则：
+- 第一，目标一定要很明确，不能宽泛。比如不能设置这样的目标，“成为一流公司”，因为这个目标太宽泛，没有标准。比如“我们要做天底下最好的产品”，这个目标也是错的，因为最好的产品也是无法判断的。
+- 第二，目标要可以衡量。目标一定要可以衡量，可以检验，能够数量化并能够验证。
+- 第三，目标之间要平衡、因为任何一个组织或者个人，都会有多个目标，所以目标之间要平衡。
+- 第四，目标要有预算。可以书面说明，书面表达的目标可以保证符合逻辑。
+
+
+#### 10.3 目标执行与追踪
+- 心中有一幅远景，却无能力去执行，终究只是幻想罢了，所以，每月要开一次月绩效指标执行复盘。要针对绩效表现“异常”的指标（包括但不限于：退步，与预算值、目标值、标准值、去年同期差异超过20%，内外部异常事件…等），进行差异原因分析并提出改善对策。
 
