--- a/Read/ReadBlogWiki/11.搞钱搞钱/02.电商平台的选取.md
+++ b/Read/ReadBlogWiki/11.搞钱搞钱/02.电商平台的选取.md
@@ -1,31 +1,34 @@
-# 03.选品定位的说明
+# 04.电商平台的选取
 #### 目录介绍
-- 01.如何选合适品种
-    - 1.0 选品种类
-    - 1.1 抖音选品
-    - 1.2 快手选品
-    - 1.3 拼多多选品
-    - 1.4 京东选品
-    - 1.5 亚马逊选品
-    - 1.6 淘宝选品
-- 02.如何去上架商品
-    - 2.1 上架抖音
-    - 2.2 上架快手
-    - 2.3 上架拼多多
-    - 2.4 上架京东
-    - 2.5 上架亚马逊
-    - 2.6 上架淘宝
-- 03.如何给商品定价
-    - 3.1 抖音选品定价
-    - 3.2 快手选品定价
-    - 3.3 拼多多选品定价
-    - 3.4 京东选品定价
-    - 3.5 亚马逊选品定价
-    - 3.6 淘宝选品定价
+- 01.抖音开店的笔记
+- 02.快手开店的笔记
+- 03.拼多多开店笔记
+- 04.京东开店的笔记
+- 05.亚马逊开店笔记
+- 06.淘宝开店的笔记
+- 07.小红书开店笔记
 
 
 
-### 01.如何选合适品种
+### 01.抖音开店的说明
+#### 1.1 抖音店铺注册
+- 一件发货货源选择
+    - 抖音自己的供应链平台
+    - 1688
+
+
+#### 1.2 一件代发
+- 抖音供应链平台找货源一件代发
+    - 店铺出单之后，上家会直接发货给消费者；消费者确认收货之后，平台自动给你结算。
+    - 入驻抖音供应链平台步骤：在浏览器搜索“抖音供应链平台”，进入抖音供应链平台官网，填写一堆的信息。
+    - 具体看：https://zhuanlan.zhihu.com/p/652768718
+- 1688一件代发找货源
+    - 每个平台其实都是不允许直接发其他平台的联系方式，或者是做站外引流的。
+    - 在1688找货源的话，为了方便后续深度合作，洽谈更多一件代发合作细节，最好的方法还是在微信聊。
+
+
+
+#### 1.3 如何选合适品种
 - 选品很重要
     - 特别是对于一个新店，直接决定着你的店铺什么时候能出单，能出多少单。
 - 如何去选品
@@ -38,7 +41,7 @@
 
 
 
-#### 1.0 选品种类
+#### 1.4 选品种类
 - 一件 代发百货
   - 具体可以看1688，日用百货分类
   - 杯子（玻璃杯，刻字杯，保温杯，儿童水杯，定制杯子，创意杯子等等）
@@ -46,9 +49,7 @@
   - 小夜灯（小台灯，床头灯，硅胶灯）
 
 
-
-### 02.如何去上架商品
-#### 2.1 上架抖音
+#### 1.5 上架抖音
 - 抖店做无货源的比较多，特别是刚开始的小店。
     - 选好品之后，可以直接根据图片从淘特、拼多多上找货源，然后批量上架，出单就代发货。
     - 陶特和拼多多上的卖家大多是厂家，价格便宜。
@@ -56,13 +57,21 @@
 
 
 
-### 03.如何给商品定价
+#### 1.6 如何给商品定价
 - 货源平台上架的时候
     - 设置一个售卖价，一般是原价的2倍-3倍，这中间的差价就是你的利润。
 - 设置新人折扣券
     - 新店，除了上架的是爆款之外，如果想尽快出销量，还得有价格优势。
     - 设置比较给力的新人折扣券，利用低价来吸引购买。
     - 做过店铺的都知道，销量越多买的人越多，越没销量越无人问津。
+
+
+
+### 02.快手开店的笔记
+
+
+### 03.拼多多开店笔记
+
 
 
 
