feat：完善usb通信笔记

--- a/Read/ReadAndroid/05.智能硬件/07.设备串口通信实践.md
+++ b/Read/ReadAndroid/05.智能硬件/07.设备串口通信实践.md
@@ -7,9 +7,11 @@
 
 
 
+
 ### 01.串口通信的方案
 - 通信方案
   - USB Socket通信和串口通信。每一种方式都有自己的设备限制和场景限制。
+
 
 
 ### 02.方案的对比分析
@@ -66,7 +68,7 @@
 
 
 ### 04.USB通信的方案
-#### 4.1 基于Socket通信
+#### 4.3 基于Socket通信
 - Socket通信的优点
     - 1、传输数据支持多种编码：传输数据为字节级，可灵活转换适配各种编码方式。
     - 2、支持一对多：基于Socket通信，支持一对多，后期扩展性强。
@@ -82,6 +84,23 @@
         - 2、在PC端，建立一个socket client端，连接到端口为11111的server上。
 
 
+#### 4.4 TCP粘包/拆包
+- TCP编程底层都有粘包和拆包机制，因为我们在C/S这种传输模型下，以TCP协议传输的时候，在网络中的byte其实就像是河水，TCP就像一个搬运工,将这流水从一端转送到另一端，这时又分两种情况：
+    - 1、如果客户端的每次制造的水比较多，也就是我们常说的客户端给的包比较大，TCP这个搬运工就会分多次去搬运。
+    - 2、如果客户端每次制造的水比较少的话，TCP可能会等客户端多次生产之后，把所有的水一起再运输到另一端。
+    - 上述第一种情况，就是需要我们进行粘包，在另一端接收的时候，需要把多次获取的结果粘在一起，变成我们可以理解的信息，第二种情况，我们在另一端接收的时候，就必须进行拆包处理，因为每次接收的信息，可能是另一个远程端多次发送的包，被TCP粘在一起的。
+- 粘包问题的解决策略：由于底层的TCP无法理解上层的业务数据，所以在底层是无法保证数据包不被拆分和重组的，这个问题只能通过上层的应用协议栈设计来解决，根据业界的主流协议的解决方案，可以归纳如下。
+    - 1、消息定长，例如每个报文的大小为固定长度200字节，如果不够，空位补空格；
+    - 2、在包尾增加回车换行符进行分割，例如FTP协议；
+    - 3、将消息分为消息头和消息体，消息头中包含表示消息总长度（或者消息体长度）的字段，通常设计思路为消息头的第一个字段使用int32来表示消息的总长度；
+    - 4、更复杂的应用层协议。
+- 采用的解决方案：
+    - 目前我们微校使用的更复杂的应用层协议的包结构定义
+    ```
+    包头	包长度	包ID	版本号	Json数据	MD5	包尾
+    WX+U/D/C)	69	1	1.0.0	{"action":"pay","total":1}	cc3d4f642efb68525ea4a7d21ff5ad7e	\r\n
+    ```
+    - 使用队列的方式，接收事件收到数据就往队列里添加，数据处理线程从队列里取数据，以分隔符 “\r\n” 就作为数据结尾，截取分隔符之前的数据 ，就得到了一个完整的数据段，然后再验证校验确保数据正确。
 
 
 
@@ -89,8 +108,9 @@
 
 
 
-
-
+#### 关联项目
+- SerialPort
+  - 串口项目demo
 
 
 
