--- a/Read/ReadBlogWiki/03.建立体系/01.信息过载怎么办.md
+++ b/Read/ReadBlogWiki/03.建立体系/01.信息过载怎么办.md
@@ -8,6 +8,9 @@
 
 
 ### 01.先来描述一场景
+- ![image](https://img-blog.csdnimg.cn/direct/928cbf4125214259b9a94592d8ed208c.png)
+
+
 #### 1.1 大量信息的爆炸
 - 每天都有大量的信息，知识，新闻等，让碎片化时间感觉自己都是在学习。那么你究竟学习了什么东西？可能一时间难以回答这个问题，不要紧，可以坐下来静静思考一下……
 - 收藏好文章【收藏的可能下次就不会看了】，觉得这个文章很好，可是说不出所以然，究竟学到了什么？
@@ -23,6 +26,9 @@
 
 
 ### 02.信息过载的现状
+- ![image](https://img-blog.csdnimg.cn/direct/3147d9d6826642a7a2d04d9e810f2e87.png)
+
+
 #### 2.1 过载的情况描述
 - 信息时代，作为离信息距离最近的职业之一，程序员应该最能感受这个时代的信息洪流与知识迭代的速度有多快。
 - 信息数据量的高速增长，也带来了处理信息技术的快速发展，所以新技术层出不穷，而且现有的技术也开始在其深度和广度领域不断地开疆拓土。
@@ -49,6 +55,10 @@
 
 
 ### 03.疲于奔命地学习
+- ![image](https://img-blog.csdnimg.cn/direct/cf19a97569664e44aa8f296209843ed1.png)
+
+
+
 #### 3.1 陷入疲于奔命模式
 - 在面对这股信息与知识的洪流时，有时我们会不自觉地就进入到了 “疲于奔命”模式中。
 - **因为每天感觉有太多的信息要处理，太多的知识想学习。计划表排得满满的，似乎每天没能完成当天的计划，就会产生焦虑感，造成了日复一日的 “疲于奔命” 状态**。
@@ -65,6 +75,10 @@
 
 
 ### 04.心智模型去筛选
+- ![image](https://img-blog.csdnimg.cn/direct/08476437411642f7b14030d783423470.png)
+
+
+
 #### 4.1 如何筛选信息
 - 面对大量的信息和知识，我们该如何应对？这可以从两个角度来考虑：**信息和知识本身的价值？我需要怎样的信息和知识**？
 - 第一点，信息和知识的价值是一个主观的判断，有一个客观点的因子是获取门槛。如果一个信息或知识随处可得，大家都能接触到，甚至变得很热门，那么其价值可能就不大。
@@ -80,16 +94,20 @@
 
 
 ### 05.为应用去做和学
+- ![image](https://img-blog.csdnimg.cn/direct/70133039d13b4dc5b7cb89c347e19d6b.png)
+
+
+
 #### 5.1 没目的学习是徒劳
 - 储备了信息，建立了知识，最终都是为了应用。囤积信息，学习知识，如果不能被应用在改变自己上，那还有什么意义？
-- 没有目的的学习是徒劳的，它仅仅是在我们的头脑中流过一遍，流过的痕迹很快又会被新的信息冲刷干净。
+- **没有目的的学习是徒劳的，它仅仅是在我们的头脑中流过一遍，流过的痕迹很快又会被新的信息冲刷干净**。
 - 不管我们拥有怎样的 “最强大脑”，在面对这股信息与知识洪流时，都几乎可忽略不计。所以，学习带着目标是比较好的！
 
 
 
 #### 5.2 学会取舍去做和学
 - 做和学就要有选择和取舍，你得挑选那些真正值得做和学的东西去让大脑满负荷运转，但凡投入决心去做的事情，就需要百分百投入。
-- 这就是专注于少而精的东西，深入了解这些东西，进入到更深的层次上。深可以无止境，那到底多深才合适？
+- **这就是专注于少而精的东西，深入了解这些东西，进入到更深的层次上**。深可以无止境，那到底多深才合适？
 - 我的答案是：让你的内心对取得的效果感受到满意的深度层次上。它的反面是：但凡心存疑虑，不是那么确定要全力投入的事情，干脆就不做了。
 
 
