--- a/Read/ReadBlogWiki/04.执行策略/12.五问根因分析法.md
+++ b/Read/ReadBlogWiki/04.执行策略/12.五问根因分析法.md
@@ -10,7 +10,7 @@
 
 
 ### 01.前言背景的说明
-- PDCA 执行法，它把执行过程分为四个环节。其中在检查（Check）环节，最容易出现的问题就是，分析原因的时候，只看到表层的原因，而没有去深挖深层的根本原因。
+- 在实践过程中，遇到了卡点或者问题，该如何排查。其中在检查环节，最容易出现的问题就是，分析原因的时候，只看到表层的原因，而没有去深挖深层的根本原因。
 - 这就会导致我们给出的解决方案治标不治本，虽然短时间内做了应急处理，但是按下葫芦浮起瓢，相关的问题之后还会接连不断地冒出来。
 
 
@@ -21,6 +21,9 @@
 
 ### 03.丰田的5W分析法
 - 5W 根因分析法到底是什么做的呢？根据丰田汽车公司前副社长大野耐一的描述，就是重复问五次“为什么”，问题的本质和解决办法就会变得显而易见。
+- 所谓5why分析法，又称“5问法”，也就是对一个问题点连续以5个“为什么”来自问，以追究其根本原因。
+- 5why法的关键所在：鼓励解决问题的人要努力避开主观或自负的假设和逻辑陷阱，从结果着手，沿着因果关系链条，顺藤摸瓜，直至找出原有问题的根本原因。
+
 
 
 #### 3.1 看一个例子
@@ -78,14 +81,16 @@
 
 ### 06.实际使用注意点
 #### 6.1 找到根本原因是关键
-- 问题数量不是关键，找到根本原因才是关键。在介绍业务分析这个例子的时候，已经提到，5W或者说5个为什么只是一个形象的说法，3 个也可以，7 个也可以，关键在于找到根本原因。所以一个最简单的提问方法就是：下一个问题是对上一个回答的进一步深入。
-- 虽然数量可多可少，但我建议不要少于 3 个，因为凭借 3 个以下的为什么，大概率找不出根本原因；但是也不要多于 7 个，因为如果问了 7 个以上的为什么还没找到根本原因，那就要审视一下问题本身是不是有问题了，比如关注的焦点偏移，前面问的是 A，后面变成了问 B 了。
+- 问题数量不是关键，找到根本原因才是关键。在介绍业务分析这个例子的时候，已经提到，5W或者说5个为什么只是一个形象的说法，3 个也可以，7 个也可以，关键在于找到根本原因。
+- 所以一个最简单的提问方法就是：下一个问题是对上一个回答的进一步深入。
+- 虽然数量可多可少，但建议不要少于 3 个，因为凭借 3 个以下的为什么，大概率找不出根本原因；但是也不要多于 7 个，因为如果问了 7 个以上的为什么还没找到根本原因，那就要审视一下问题本身是不是有问题了，比如关注的焦点偏移，前面问的是 A，后面变成了问 B 了。
 
 
 
 #### 6.2 首先要明确问题本身
 - 5W 根因分析法起源于生产过程，通常情况下问题都是比较明显的，比如机器停机了或者次品率升高了。但是，还有很多情况下问题本身其实是不明确的，每个人的理解可能都不太一样。
-- 如果没有明确问题就开始问为什么，无论问题多么精彩都没有意义，甚至越精彩离题越远。比如“成交量大幅下降”，这个问题就不明确，到底下降10%、30%还是50%才算“大幅”？是同比下降还是环比下降？是某一个子业务下降很多，还是所有子业务都在下降？如果这些问题都不明确就开始进行根因分析，就很可能得出一大堆似是而非的原因和改进措施。
+- 如果没有明确问题就开始问为什么，无论问题多么精彩都没有意义，甚至越精彩离题越远。
+- 比如“成交量大幅下降”，这个问题就不明确，到底下降10%、30%还是50%才算“大幅”？是同比下降还是环比下降？是某一个子业务下降很多，还是所有子业务都在下降？如果这些问题都不明确就开始进行根因分析，就很可能得出一大堆似是而非的原因和改进措施。
 
 
 
