--- a/Read/ReadBlogWiki/04.执行策略/12.五问根因分析法.md
+++ b/Read/ReadBlogWiki/04.执行策略/12.五问根因分析法.md
@@ -1,32 +1,30 @@
 #### 目录介绍
-- 01.前言背景的说明
-- 02.5W根因分析法由来
-- 03.丰田的5W分析法
-- 04.实际业务场景分析
+- 01.5W分析法的背景
+- 02.丰田的5W分析法
+- 03.为何要去学习5W
+- 04.实际场景的分析
 - 05.5W分析管理场景
 - 06.实际使用注意点
 - 07.总结重点的内容
 
 
 
-### 01.前言背景的说明
+
+### 01.5W分析法的背景
 - 在实践过程中，遇到了卡点或者问题，该如何排查。其中在检查环节，最容易出现的问题就是，分析原因的时候，只看到表层的原因，而没有去深挖深层的根本原因。
 - 这就会导致我们给出的解决方案治标不治本，虽然短时间内做了应急处理，但是按下葫芦浮起瓢，相关的问题之后还会接连不断地冒出来。
-
-
-
-### 02.5W根因分析法由来
 - 怎么解决前面的问题呢？这就要靠5W根因分析法。它又叫5Why分析法或者丰田五问法，最初是由丰田集团创始人丰田佐吉提出的，后来成为丰田汽车公司获得成功的重要方法。
 
 
-### 03.丰田的5W分析法
+### 02.丰田的5W分析法
 - 5W 根因分析法到底是什么做的呢？根据丰田汽车公司前副社长大野耐一的描述，就是重复问五次“为什么”，问题的本质和解决办法就会变得显而易见。
-- 所谓5why分析法，又称“5问法”，也就是对一个问题点连续以5个“为什么”来自问，以追究其根本原因。
 - 5why法的关键所在：鼓励解决问题的人要努力避开主观或自负的假设和逻辑陷阱，从结果着手，沿着因果关系链条，顺藤摸瓜，直至找出原有问题的根本原因。
+- 沿着“为什么——为什么”的因果路径逐一提问，先问第一个“为什么”，获得答案后，再问为何会发生，以此类推，问5次“为什么”，或者更多，以此来挖掘出问题的真正原因。
+- ![image]()
 
 
 
-#### 3.1 看一个例子
+#### 2.1 看一个例子
 - 大野耐一曾经举过这样一个例子：
 - 问题 1：为什么机器停了？答：因为机器超载，保险丝烧断了。 
 - 问题 2：为什么机器会超载？答：因为轴承的润滑不足。 
@@ -35,7 +33,7 @@
 - 问题 5：为什么润滑泵的轮轴会耗损？答：因为杂质跑到里面去了。
 
 
-#### 3.2 问题思考的层次
+#### 2.2 问题思考的层次
 - 反思一下。针对问题的思考，我们处于哪个层级，那么对应的解决方案也是不一样的。问题的本质会随着你追问的层次而不相同。
 - 如果到了问题1就停止追问，那么工人的措施就是更换保险丝，一段时间后保险丝肯定还会烧断。
 - 如果到了问题2就停止追问，那么工人措施就是添加润滑油，过一段时间后机器又会超载。
@@ -43,7 +41,19 @@
 - 只有当追问到了问题5，才能找出停机的根本原因，这时工人的措施就是给润滑泵加上防杂质的滤网，从而彻底解决问题。
 
 
-### 04.实际业务场景分析
+
+### 03.为何要去学习5W
+#### 3.1 学习5W的目的
+- 系统的方法并不急于立即解决问题，而是立足于揭示问题根源，找出长期的对策！
+- ![image]()
+- 为什么要学习和使用5W根因分析法，例如冰山问题，找到根本原因！
+- ![image]()
+
+
+
+
+
+### 04.实际场景的分析
 #### 4.1 5W是形象的说法
 - 在某交易平台的业务规划目标讨论会上，我通过 3 个为什么，了解到了业务目标背后的深层考虑。
 - 问题 1：为什么今年的业务目标是成交金额翻番？答：因为只有成交金额翻番我们才能达到盈亏平衡点。 
@@ -60,6 +70,15 @@
 - 问题 3：为什么 IO 多路复用性能高？答：因为 IO 多路复用既不会像阻塞 IO 那样没有数据的时候挂起工作线程，也不需要像非阻塞 IO 那样轮询判断是否有数据。 
 - 问题 4：为什么 IO 多路复用既不需要挂起工作线程，也不需要轮询？答：因为 IO 多路复用可以在一个监控线程里面监控很多的连接，没有 IO 操作的时候只要挂起监控线程；只要其中有连接可以进行 IO 操作的时候，操作系统就会唤起监控线程进行处理。 
 - 问题 5：那还是会挂起监控线程啊，为什么这样做就性能高呢？
+
+
+
+#### 4.3 5W指导准则
+- 原则1：问问题要尽可能多方考虑。尽量找出所有可能原因
+- 原则2：问题要绝对的客观。找的是原因，不是借口和理由
+- 原则3：根据数据、事实问问题，而非猜测和假设。做到三现，在现场通过现物掌握现实
+- 原则4：不要认为答案是显而易见的。只有锲而不舍，追根究底，才能找到真正的答案。
+
 
 
 ### 05.5W分析管理改进场景
@@ -83,7 +102,7 @@
 #### 6.1 找到根本原因是关键
 - 问题数量不是关键，找到根本原因才是关键。在介绍业务分析这个例子的时候，已经提到，5W或者说5个为什么只是一个形象的说法，3 个也可以，7 个也可以，关键在于找到根本原因。
 - 所以一个最简单的提问方法就是：下一个问题是对上一个回答的进一步深入。
-- 虽然数量可多可少，但建议不要少于 3 个，因为凭借 3 个以下的为什么，大概率找不出根本原因；但是也不要多于 7 个，因为如果问了 7 个以上的为什么还没找到根本原因，那就要审视一下问题本身是不是有问题了，比如关注的焦点偏移，前面问的是 A，后面变成了问 B 了。
+- 虽然数量可多可少，但建议不要少于 3 个，因为少于3个大概率找不出根本原因；但是也不要多于 7 个，因为多于7个还没有找到根本原因，那就要审视一下问题本身是不是有问题。
 
 
 
