--- a/Read/ReadBlogWiki/04.执行策略/12.五问根因分析法.md
+++ b/Read/ReadBlogWiki/04.执行策略/12.五问根因分析法.md
@@ -16,6 +16,8 @@
 - 怎么解决前面的问题呢？这就要靠5W根因分析法。它又叫5Why分析法或者丰田五问法，最初是由丰田集团创始人丰田佐吉提出的，后来成为丰田汽车公司获得成功的重要方法。
 
 
+
+
 ### 02.丰田的5W分析法
 - 5W 根因分析法到底是什么做的呢？根据丰田汽车公司前副社长大野耐一的描述，就是重复问五次“为什么”，问题的本质和解决办法就会变得显而易见。
 - 5why法的关键所在：鼓励解决问题的人要努力避开主观或自负的假设和逻辑陷阱，从结果着手，沿着因果关系链条，顺藤摸瓜，直至找出原有问题的根本原因。
@@ -42,6 +44,7 @@
 
 
 
+
 ### 03.为何要去学习5W
 #### 3.1 学习5W的目的
 - 系统的方法并不急于立即解决问题，而是立足于揭示问题根源，找出长期的对策！
@@ -51,6 +54,10 @@
 
 
 
+#### 3.2 5W分析法步骤
+- 第一步：把握现状。搞清楚问题然后针对性查找原因，注意首先要搞清楚问题本身，和针对性查找原因。
+- 第二步：不断原因调查深入。
+
 
 
 ### 04.实际场景的分析
@@ -59,7 +66,7 @@
 - 问题 1：为什么今年的业务目标是成交金额翻番？答：因为只有成交金额翻番我们才能达到盈亏平衡点。 
 - 问题 2：为什么今年要求达到盈亏平衡点？答：因为集团要求我们的业务能够自负盈亏。 
 - 问题 3：我们本质上还属于创新业务，为什么集团要求我们的业务能够自负盈亏？答：因为疫情的影响，集团需要开源节流，减少非盈利业务的持续投入。
-- 你可能觉得有些奇怪：怎么这个例子只问了3个为什么就结束了呢？因为5个为什么只是一个形象的说法，实际操作中可以是 3 个，也可以是 7 个，关键在于通过追问找到根本原因。
+- 你可能觉得有些奇怪：怎么这个例子只问了3个为什么就结束了呢？因为5个为什么只是一个形象的说法，不管几个为什么，关键在于通过追问找到根本原因。
 
 
 
@@ -74,9 +81,9 @@
 
 
 #### 4.3 5W指导准则
-- 原则1：问问题要尽可能多方考虑。尽量找出所有可能原因
-- 原则2：问题要绝对的客观。找的是原因，不是借口和理由
-- 原则3：根据数据、事实问问题，而非猜测和假设。做到三现，在现场通过现物掌握现实
+- 原则1：问问题要尽可能多方考虑。尽量找出所有可能原因。
+- 原则2：问题要绝对的客观。找的是原因，不是借口和理由。
+- 原则3：根据数据、事实问问题，而非猜测和假设。做到三现，在现场通过现物掌握现实。
 - 原则4：不要认为答案是显而易见的。只有锲而不舍，追根究底，才能找到真正的答案。
 
 
