--- a/Read/ReadBlogWiki/04.执行策略/14.四维度总结分析.md
+++ b/Read/ReadBlogWiki/04.执行策略/14.四维度总结分析.md
@@ -13,10 +13,11 @@
 
 
 
+
 ### 01.前言简单的介绍
 #### 1.1 好方法不一定达到结果
 - 这些方法能够提升你拿到好结果的概率，但是不能保证让你一定拿到好的结果，因为影响最终结果的因素太多了。
-- 就算大量使用方案设计法，决策过程仍然有可能有失误。比如讨论备选方案的时候漏了一个重要的方案；或者决策时采用的判断标准有问题，对性能要求估计过高，实际上线后业务量远远没有预期那么大等情况。
+- 就算大量使用方案设计法，决策过程仍然有可能有失误。比如讨论备选方案的时候漏了一个重要的方案；或者决策时采用的判断标准有问题，多方面原因造成结果未达标。
 - 就算使用罗列执行计划，执行过程仍然有可能出现偏差。对任务进行规划和跟踪，具体执行的时候，可能会受到使用者的水平和投入资源等因素的限制。
 
 
@@ -91,15 +92,14 @@
 
 
 #### 7.2 业务理解能力
-- 做完一个项目后，你可以从以下角度去总结：业务的适应场景是什么？目标用户是谁？目标用户有什么特点？解决了目标用户的什么问题？实际的效果如何？用户为什么喜欢或者不喜欢这个功能？
+- 做完一个项目后，可以从以下角度去总结：业务的适应场景是什么？目标用户是谁？目标用户有什么特点？解决了目标用户的什么问题？实际的效果如何？用户为什么喜欢或者不喜欢这个功能？
 - 随着做的项目越来越多，你通过总结得到的业务理解信息和能力也越积越多，到了一定阶段就可以量变导致质变，业务理解能力大大提升。
 
 
 ### 08.三条总结说事情
 #### 8.1 如何快速说总结
 - 做总结可以说是我们日常工作中非常重要的事情了，但却不是人人都能做得好，毕竟这个世界上，把简单问题复杂化很容易，而把复杂问题简单化很难。
-- 那究竟如何做好总结呢？不管是什么总结，大到公司三年战略规划，小到如何接客服电话，一律要求用三条说清楚。
-- 三条总结，不是总结出最重要的三点，而是用三点把所有的事情说清楚。
+- 那究竟如何做好总结呢？不管是什么总结，大到公司三年战略规划，小到如何接客服电话，一律要求用三条说清楚。三条总结，不是总结出最重要的三点，而是用三点把所有的事情说清楚。
 
 
 #### 8.2 三条总结法
@@ -124,7 +124,6 @@
 #### 8.4 三条总结法收益
 - 三条总结的过程，也是一个逼迫自己不断向上攀登认知更高峰的过程，对越复杂问题进行三条总结，越需要你站在更高的高度，进行更高水平的归纳总结和提炼。
 - 完成了对越复杂问题的三条总结，也就完成了一次自己认知的越大飞跃。
-
 
 
 ### 09.最后要总结一下
