--- a/Read/ReadAndroid/11.Java经典/10.多线程并发前世今生.md
+++ b/Read/ReadAndroid/11.Java经典/10.多线程并发前世今生.md
@@ -12,10 +12,12 @@
     - 2.5 编译优化导致有序性问题
     - 2.6 并发编程三要素
 - 03.并发bug解决方案
-    - 3.1 解决可见性问题
-    - 3.2 解决原子性问题
-    - 3.3 解决有序性问题
-    - 3.4 理解Happens-Before
+    - 3.1 并发编程切入点
+    - 3.2 解决可见性问题
+    - 3.3 解决原子性问题
+    - 3.4 解决有序性问题
+    - 3.5 理解Happens-Before
+
 
 
 
@@ -141,12 +143,26 @@
 - 多线程并发bug的源头说明
     - 缓存导致的可见性问题，线程切换带来的原子性问题，编译优化带来的有序性问题，其实缓存、线程、编译优化的目的和我们写并发程序的目的是相同的，都是提高程序性能。
     - 但是技术在解决一个问题的同时，必然会带来另外一个问题，所以在采用一项技术的同时，一定要清楚它带来的问题是什么，以及如何规避。
+- 线程安全需要保证几个基本特性
+    - 1、原子性，简单说就是相关操作不会中途被其他线程干扰，一般通过同步机制实现。
+    - 2、可见性，是一个线程修改了某个共享变量，其状态能够立即被其他线程知晓，通常被解释为将线程本地状态反映到主内存上，volatile 就是负责保证可见性的。
+    - 3、有序性，是保证线程内串行语义，避免指令重排等。
 
 
 
 ### 03.并发bug解决方案
-#### 3.1 解决可见性问题
-##### 3.1.1 彻底理解可见性
+#### 3.1 并发编程切入点
+- 什么是线程安全
+    - 线程安全就是当多个线程访问一个对象时，如果不用考虑这些线程在运行时环境下的调度和交替执行，也不需要进行额外的同步，或者在调用方进行任何其他的协调操作，调用这个对象的行为都可以获得正确的结果，那这个对象是线程安全的。
+    - 通俗来讲，如果你的代码所在的进程中有多个线程在同时运行，而这些线程可能会同时运行这段代码。如果每次运行结果和单线程运行的结果是一样的，而且其他的变量的值也和预期的是一样的，就是线程安全的。
+    - 或者说:一个类或者程序所提供的接口对于线程来说是原子操作或者多个线程之间的切换不会导致该接口的执行结果存在二义性，也就是说我们不用考虑同步的问题 。
+- 并发切入点是什么？
+    - 并发分析的切入点分为**两个核心，三大性质**。两大核心：JMM内存模型（主内存和工作内存）以及happens-before；三条性质：原子性，可见性，有序性。
+
+
+
+#### 3.2 解决可见性问题
+##### 3.2.1 彻底理解可见性
 - 再次思考下可见性的理解
     - **一个线程对共享变量的修改，另外一个线程能够立刻看到，我们称为可见性**。
 - 可见性问题到底如何解决呢
@@ -154,7 +170,7 @@
 
 
 
-##### 3.1.2 常见场景和解决措施
+##### 3.2.2 常见场景和解决措施
 - 那些场景会出现并发可见性问题
     - 单例模式中的懒汉式获取对象场景
     - 多个线程修改一个成员变量场景
@@ -165,8 +181,8 @@
 
 
 
-#### 3.2 解决原子性问题
-##### 3.2.1 彻底理解可见性
+#### 3.3 解决原子性问题
+##### 3.3.1 彻底理解可见性
 - 再次思考一下原子性的理解
     - **原子性问题源头是线程切换**，一个或者多个操作在 CPU 执行的过程中不被中断的特性，称为“原子性”。理解这个特性有助于你分析并发编程 Bug 出现的原因～
 - 原子性问题到底该如何解决呢
@@ -175,7 +191,7 @@
 
 
 
-##### 3.2.2 常见场景和解决措施
+##### 3.3.2 常见场景和解决措施
 - 那些场景会出现并发原子性问题
     - 待完善
 - 解决原子性的措施有哪些
@@ -185,7 +201,7 @@
     - 具有互斥性
 
 
-##### 3.2.3 简易锁模型
+##### 3.3.3 简易锁模型
 - 当谈到互斥，终极解决方案：锁。同时大脑中还会出现以下模型：
     - ![image](https://img-blog.csdnimg.cn/direct/3c759137f1014b3390c5468238cc4b79.png)
 - 把一段需要互斥执行的代码称为临界区。
@@ -195,7 +211,7 @@
     - 我们锁的是什么？我们保护的又是什么？
 
 
-##### 3.2.4 改进后锁模型
+##### 3.3.4 改进后锁模型
 - 思考改进后的锁模型场景
     - 锁和锁要保护的资源是有对应关系的，比如你用你家的锁保护你家的东西，我用我家的锁保护我家的东西。
     - 在并发编程世界里，锁和资源也应该有这个关系，但这个关系在我们上面的模型中是没有体现的，所以我们需要完善一下我们的模型。
@@ -208,7 +224,7 @@
 
 
 
-##### 3.2.5 锁和受保护资源关系
+##### 3.3.5 锁和受保护资源关系
 - 受保护资源和锁之间的关联关系非常重要，他们的关系是怎样的呢？
     - 一个合理的关系是：受保护资源和锁之间的关联关系是 N:1 的关系。
     - 现实世界里，可以用多把锁来保护同一个资源，但在并发领域是不行的，并发领域的锁和现实世界的锁不是完全匹配的。
@@ -233,17 +249,15 @@
 
 
 
-#### 3.3 解决有序性问题
+#### 3.4 解决有序性问题
 
 
 
-#### 3.4 理解Happens-Before
+#### 3.5 理解Happens-Before
 - 如何理解 Happens-Before 呢？
     - Happens-Before 并不是说前面一个操作发生在后续操作的前面，它真正要表达的是：**前面一个操作的结果对后续操作是可见的**。
     - Happens-Before 约束了编译器的优化行为，虽允许编译器优化，但是要求编译器优化后一定遵守 Happens-Before 规则。
 - 
-
-
 
 
 
