--- a/Read/ReadAndroid/05.智能硬件/08.M1卡和CPU卡学习.md
+++ b/Read/ReadAndroid/05.智能硬件/08.M1卡和CPU卡学习.md
@@ -8,11 +8,13 @@
     - 2.2 CPU操作流程
     - 2.3 读卡器与卡交互指令
     - 2.4 APDU指令学习
+    - 2.5 CPU卡开发思路
 - 03.M1卡基础学习
     - 3.1 什么是M1卡
     - 3.2 M1卡基础概念
     - 3.3 M1卡片操作步骤
     - 3.4 M1卡通信原理
+    - 3.5 M1卡开发思路
 - 04.IC卡开发设计
     - 4.1 总体设计思路
     - 4.2 卡操作流程设计
@@ -21,6 +23,7 @@
     - 5.1 读写卡分析
     - 5.2 如何设计轮询方案
     - 5.3 轮询设计思路
+
 
 
 
@@ -209,7 +212,11 @@
 
 
 
+#### 3.4 M1卡通信原理
 
+
+
+#### 3.5 M1卡开发思路
 
 
 
